[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/main_menu.gd" type="Script" id=2]
[ext_resource path="res://ui/title.png" type="Texture" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MainMenu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 25
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 275.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
margin_left = 162.0
margin_right = 862.0
margin_bottom = 275.0
rect_min_size = Vector2( 0, 275 )
texture = ExtResource( 3 )
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
pause_mode = 2
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 407.0
custom_constants/margin_left = 75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 75.0
margin_right = 245.0
margin_bottom = 107.0
size_flags_horizontal = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 0.0
margin_right = 170.0
margin_bottom = 33.0
custom_styles/hover = SubResource( 1 )
text = "Play"

[node name="SettingsButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 37.0
margin_right = 170.0
margin_bottom = 70.0
text = "Settings"

[node name="ExitButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 74.0
margin_right = 170.0
margin_bottom = 107.0
text = "Exit"
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
